--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "app": "node server/app.js"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^2.3.1",
+    "@vueuse/core": "^8.4.2",
     "express": "^4.18.1",
+    "lingo3d-vue": "^1.0.33",
     "nodejs-websocket": "^1.7.2",
     "pinia": "^2.0.13",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0",
-    "vue": "^3.2.25",
     "vite": "^2.9.5",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "lingo3d-vue": "^1.0.33"
+    "vue": "^3.2.25"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "tailwindcss": "^3.0.24",
+    "autoprefixer": "^10.4.5",
     "concurrently": "^7.1.0",
     "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -34,12 +35,12 @@
     "husky": "^7.0.4",
     "i": "^0.3.7",
     "lint-staged": "^12.4.1",
+    "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "sass": "^1.51.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
-    "vue-tsc": "^0.34.7",
-    "postcss": "^8.4.12",
-    "autoprefixer": "^10.4.5"
+    "vue-tsc": "^0.34.7"
   },
   "husky": {
     "hooks": {
