--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "baseUrl": "./",
     "paths": {
       "src": ["./src/*"],
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
     },
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
